# fastsass

./: .dockerignore  .gitignore  Dockerfile  README.md  commitlint.config.js  docker-compose.yml  example.env  main.py  package-lock.json  package.json  pyproject.toml
app/: app.py  socket.py
app/auth/: jwt_handler.py
app/configs/: settings.py
app/constant/: index.py
app/db/: mongo.py
app/dependencies/: subscription.py
app/dump/: faker.py
app/models/: application_model.py  companies_model.py  jobs_model.py  notification_model.py  otp_model.py  save_job_model.py  team_invites_model.py  user_model.py
app/routes/: admin_routes.py  auth_routes.py  employer_routes.py  jobs_routes.py  notification_routes.py  payment_routes.py
app/services/: stripe_service.py
app/utils/: error_handler.py  helper.py  send_email.py
app/validation_schema/: post_validation_schema.py  user_validation_schema.py
client/: exmple.env  middleware.ts  package.json  pnpm-lock.yaml
client/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
client/components/: apply-button.tsx  bookmark-button.tsx  case-study-card.tsx  certification-card.tsx  data-table.tsx  download-card.tsx  empty-jobs.tsx  error-message.tsx  experience-card.tsx  faq-item.tsx  file-upload.tsx  global-loader.tsx  loading-overlay.tsx  logo.tsx  notification-item.tsx  notification-popover.tsx  overlay-lock.tsx  resource-card.tsx  resume-preview.tsx  share-job-button.tsx  skill-badge.tsx  social-button.tsx  sockets-events.tsx  text-editor.tsx  theme-provider.tsx  tool-card.tsx  video-card.tsx  webinar-card.tsx
(+155 files in other folders)
