[project]
name = "fastsaas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.5.2",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "openai>=1.78.1",
    "openpyxl>=3.1.5",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.3",
    "pyjwt>=2.10.1",
    "pymongo>=4.12.0",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "sib-api-v3-sdk>=7.6.0",
    "stripe>=12.0.1",
    "uvicorn>=0.34.2",
]
